# reconmatch

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  app.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
data/benchrec/artifacts/: e0_profile.md  e1_candidates.md  e2_features.md  e4_groups.md  e5_frontier.md  e5_identifiability.md  frozen_eval.md
docs/: cash-reconciliation-domain-and-integrations.md  matching-engine-experiments-and-benchrec.md  reconciliation-controls-and-data-model.md  research-map.md  security-and-operational-resilience-baseline.md
docs/research/: 2026-07-19-industry-standard-reconciliation-architecture.md  2026-07-19-source-register.md  2026-07-20-transaction-taxonomy-and-matching-engine-design-sources.md  2026-07-20-transaction-taxonomy-and-matching-engine-design.md
docs/superpowers/plans/: 2026-07-17-reconmatch.md  2026-07-19-reconmatch-batch-match.md
docs/superpowers/specs/: 2026-07-17-reconmatch-artifact3-design.md  2026-07-19-reconmatch-batch-match-design.md  2026-07-21-benchrec-auto-bar-design.md
eval/: baseline_ci.json  compare.py  metrics.py  run_eval.py
experiments/benchrec/: baseline.py  bench_io.py  bench_stats.py  candidates.py  features.py  frontier.py  frozen_eval.py  groups.py  identifiability.py  profile.py
samples/: ledger.csv  report.json  statement.csv
src/reconmatch/: adapter.py  breaks.py  datagen.py  engine.py  schema.py
tests/: test_adapter.py  test_app.py  test_breaks.py  test_datagen.py  test_engine.py  test_eval_metrics.py  test_schema.py
tests/fixtures/: docval_sample.json
