[project]
name = "reconmatch"
version = "0.1.0"
description = "Reconciliation matching: bank-statement lines vs internal ledger, with confidence-scored matches and break resolution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.20.0",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reconmatch", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
